# fd_humanoid_robot

./: README.md
install/: local_setup.sh  setup.sh
install/neural_network_module/share/neural_network_module/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nlohmann_json/share/nlohmann_json/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nlohmann_json/share/pkgconfig/: nlohmann_json.pc
install/robot_control_module/share/ament_index/resource_index/package_run_dependencies/: robot_control_module
install/robot_control_module/share/robot_control_module/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_control_module/share/robot_control_module/cmake/: robot_control_moduleConfig.cmake
install/sensor_module/share/sensor_module/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sensor_module/share/sensor_module/cmake/: sensor_moduleConfig.cmake
log/: latest_build
src/neural_network_module/: setup.cfg  setup.py
src/neural_network_module/neural_network_module/: neural_network_node.py
src/robot_control_module/: .~lock.motor.csv#  06111635-1085行-走步.csv  CMakeLists.txt  motor.csv  motor06091400.csv  motor06092248.csv  motor061100001.csv  motor0611170000.csv  motor1.csv  motor2.csv  motor_0606.csv  motor_060821.csv  motor_0610.csv  motor_0628_squt_up2.csv  motor_0712_NO3.csv  motor_down.csv  motor_yuandi_tabu_0607.csv  package.xml
src/robot_control_module/include/robot_control_module/: csv_read.hpp
src/robot_control_module/src/: csv_read.cpp  robot_control_node.cpp  trajectory_publisher_node.cpp  trajectory_publisher_node_single_point.cpp
src/sensor_module/: CMakeLists.txt
src/sensor_module/src/: sensor_node.cpp
